--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -37,6 +37,7 @@ html {
     justify-content: center;
     font-size: 100%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
     @include screensize ($mobile) {
       font-size:95%;
     }
